<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_text_search">Поиск</string>
    <string name="button_text_mediatech">Медиатека</string>
    <string name="button_text_settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="search_title">Поиск</string>
    <string name="dark_theme">Темная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="send">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="privacy">Пользовательское соглашение</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_mediatech">MediatechActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_player">PlayerActivity</string>
    -- strings for empty erros in the xml screen
    <string name="null_string">@null</string>
    -- strings for settings activity
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_email">alexandrneshev@yandex.ru</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_type">text/plain</string>
    <string name="switch_mode_string">Темная тема</string>
    -- strings for search activity
    <string name="not_found_string">Ничего не нашлось</string>
    <string name="no_connection_string">Проблемы со связью\n\n Загрузка не удалась.Проверьте подключение к интернету</string>
    <string name="refresh_button_string">Обновить</string>
    <string name="you_are_search">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    -- string for player activity
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="track">track</string>
    <string name="not_available">Аудиофайл недоступен</string>
    <string name="default_duration">00:00</string>
    -- string for mediatech activity
    <string name="title_mediatech">Медиатека</string>
    <string name="media_favorite_tracks_title">Избранные треки</string>
    <string name="media_playlist_title">Плейлисты</string>
    <string name="media_add_new_playlist">Новый плейлист</string>
    <string name="media_favorite_tracks_error">Ваша медиатека пуста</string>
    <string name="media_playlist_error">Вы не создали \n ни одного плейлиста</string>
    <string name="playlist_name">Best songs</string>
    <string name="playlist_count"> треков</string>
    <string name="add_image">Добавить картинку</string>
    <string name="playlist_name_hint">Название *</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист «%s» создан</string>
    <string name="playlist_image">Обложка плейлиста</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="edit">Редактировать</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_question">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_delete_question">Хотите удалить плейлист «%s»?</string>
    <string name="playlist_deleted">Плейлист удалён</string>
    <string name="playlist_is_empty_for_share">В данном плейлисте нет списка треков, которым можно поделиться</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_is_empty">В этом плейлисте нет треков</string>
    <string name="dot">Dot</string>
    <string name="save">Сохранить</string>
    <string name="not_found_app">Не найдено подходящих приложений</string>
    <string name="back">Назад</string>
    <string name="more">Подробности</string>


    <plurals name="plural_count_tracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="plural_minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>


</resources>