<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BodyStartScreenStyle">

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <FrameLayout
        android:id="@+id/switch_layout"
        style="@style/SettingsListFrameForSwitch"
        android:paddingEnd="6dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/mode_switch"
            style="@style/ModeSwitch" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/share"
        style="@style/SettingsListFrame">

        <TextView
            style="@style/SettingsTextViewList"
            android:text="@string/send"/>

        <ImageView
            style="@style/SettingsImageViewList"
            android:src="@drawable/share" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/send"
        style="@style/SettingsListFrame">

        <TextView
            style="@style/SettingsTextViewList"
            android:text="@string/support" />

        <ImageView
            style="@style/SettingsImageViewList"
            android:src="@drawable/operator" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/offer"
        style="@style/SettingsListFrame">

        <TextView
            style="@style/SettingsTextViewList"
            android:layout_gravity="start|center_vertical"
            android:text="@string/privacy"/>

        <ImageView
            style="@style/SettingsImageViewList"
            android:src="@drawable/arrow_forward" />

    </FrameLayout>

</LinearLayout>