<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/dm12">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/null_string"
                android:src="@drawable/arrow_back" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_medium"
            android:paddingVertical="@dimen/dm12"
            android:text="@string/settings_title"
            android:textColor="@color/black"
            android:textSize="@dimen/ln22" />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dm21"
        android:paddingStart="@dimen/dm16"
        android:paddingEnd="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ys_regular"
            android:gravity="center"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/ln16" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dm21"
        android:paddingStart="@dimen/dm16"
        android:paddingEnd="@dimen/dm12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ys_regular"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textSize="@dimen/ln16" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/null_string"
            android:src="@drawable/share"
            app:tint="@color/gray" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dm21"
        android:paddingStart="@dimen/dm16"
        android:paddingEnd="@dimen/dm12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ys_regular"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/ln16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/null_string"
            android:src="@drawable/operator"
            app:tint="@color/gray" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dm21"
        android:paddingStart="@dimen/dm16"
        android:paddingEnd="@dimen/dm12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ys_regular"
            android:text="@string/privacy"
            android:textColor="@color/black"
            android:textSize="@dimen/ln16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/null_string"
            android:src="@drawable/arrow_forward"
            app:tint="@color/gray" />

    </FrameLayout>

</LinearLayout>