<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_navigation_graph"
    app:startDestination="@id/mediaFragment">

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.practicum.playlistmaker.ui.mediatech.fragment.MediatechFragment"
        android:label="@string/title_mediatech"
        tools:layout="@layout/fragment_mediatech">
        <action
            android:id="@+id/action_mediaFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_mediaFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_mediaFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.practicum.playlistmaker.ui.settings.fragment.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.practicum.playlistmaker.ui.search.fragment.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_activityPlayer"
            app:destination="@id/playerFragment" />
    </fragment>
    <fragment
        android:id="@+id/playerFragment"
        android:name="com.practicum.playlistmaker.ui.player.fragment.PlayerFragment"
        android:label="">
    </fragment>
    <fragment
        android:id="@+id/addPlayListFragment"
        android:label="fragment_addplaylist"
        tools:layout="@layout/fragment_addplaylist">
        <action
            android:id="@+id/action_to_addPlayListFragment"
            app:destination="@id/addPlayListFragment" />
    </fragment>

</navigation>