<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PlayerActivityStyle"
    tools:context=".ui.player.fragment.PlayerFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dm24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dm24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dm16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dm16" />

    <ImageView
        android:id="@+id/cover"
        style="@style/coverImage"
        android:layout_marginTop="82dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/album_3x" />

    <TextView
        android:id="@+id/track_name"
        style="@style/trackNameStyle"
        app:layout_constraintBottom_toTopOf="@id/track_group"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline" />

    <TextView
        android:id="@+id/track_group"
        style="@style/groupNameStyle"
        app:layout_constraintBottom_toTopOf="@id/play"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline" />

    <ImageButton
        android:id="@+id/add_to_track"
        style="@style/roundButtonStyle"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/play"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/play"
        app:srcCompat="@drawable/playlist_add_up" />

    <ImageButton
        android:id="@+id/play"
        style="@style/BackButtonImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dm4"
        android:background="@null"
        android:contentDescription="@string/null_string"
        android:src="@drawable/play_dark"
        app:layout_constraintBottom_toTopOf="@id/duration"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline" />

    <ImageButton
        android:id="@+id/like"
        style="@style/audio_player_button_like"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/play"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/play" />

    <TextView
        android:id="@+id/duration"
        style="@style/timelineStyle"
        app:layout_constraintBottom_toBottomOf="@id/timeline_title"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline" />

    <TextView
        android:id="@+id/timeline_title"
        style="@style/allTitleStyle"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/album_title"
        app:layout_constraintEnd_toStartOf="@id/timeline"
        app:layout_constraintStart_toStartOf="@id/left_guideline16" />

    <TextView
        android:id="@+id/timeline"
        style="@style/allEndTitleStyle"
        app:layout_constraintBottom_toBottomOf="@id/timeline_title"
        app:layout_constraintEnd_toEndOf="@id/right_guideline16"
        app:layout_constraintStart_toEndOf="@id/timeline_title"
        app:layout_constraintTop_toTopOf="@id/timeline_title" />

    <TextView
        android:id="@+id/album_title"
        style="@style/allTitleStyle"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/year_title"
        app:layout_constraintEnd_toStartOf="@id/album"
        app:layout_constraintStart_toStartOf="@id/left_guideline16" />

    <TextView
        android:id="@+id/album"
        style="@style/allEndTitleStyle"
        app:layout_constraintBottom_toBottomOf="@id/album_title"
        app:layout_constraintEnd_toEndOf="@id/right_guideline16"
        app:layout_constraintStart_toEndOf="@id/album_title"
        app:layout_constraintTop_toTopOf="@id/album_title" />

    <TextView
        android:id="@+id/year_title"
        style="@style/allTitleStyle"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genre_title"
        app:layout_constraintEnd_toStartOf="@id/year"
        app:layout_constraintStart_toStartOf="@id/left_guideline16" />

    <TextView
        android:id="@+id/year"
        style="@style/allEndTitleStyle"
        app:layout_constraintBottom_toBottomOf="@id/year_title"
        app:layout_constraintEnd_toEndOf="@id/right_guideline16"
        app:layout_constraintStart_toEndOf="@id/year_title"
        app:layout_constraintTop_toTopOf="@id/year_title" />

    <TextView
        android:id="@+id/genre_title"
        style="@style/allTitleStyle"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/country_title"
        app:layout_constraintEnd_toStartOf="@id/genre"
        app:layout_constraintStart_toStartOf="@id/left_guideline16" />

    <TextView
        android:id="@+id/genre"
        style="@style/allEndTitleStyle"
        app:layout_constraintBottom_toBottomOf="@id/genre_title"
        app:layout_constraintEnd_toEndOf="@id/right_guideline16"
        app:layout_constraintStart_toEndOf="@id/genre_title"
        app:layout_constraintTop_toTopOf="@id/genre_title" />

    <TextView
        android:id="@+id/country_title"
        style="@style/allTitleStyle"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/country"
        app:layout_constraintStart_toStartOf="@id/left_guideline16" />

    <TextView
        android:id="@+id/country"
        style="@style/allEndTitleStyle"
        app:layout_constraintBottom_toBottomOf="@id/country_title"
        app:layout_constraintEnd_toEndOf="@id/right_guideline16"
        app:layout_constraintStart_toEndOf="@id/country_title"
        app:layout_constraintTop_toTopOf="@id/country_title" />

</androidx.constraintlayout.widget.ConstraintLayout>